@@ -1,5 +1,6 @@
 package content.EjerciciosB;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URISyntaxException;
@@ -18,8 +19,8 @@ import java.util.stream.Collectors;
 import utilidades.Persona;
 
 public class Ejercicio8B {
-    public static void main(String[] args) {
-
+    public static void main(String[] args) throws URISyntaxException {
+        // Parte 1 Lee todas las personas
         Scanner scanner = new Scanner(System.in);
         URL url = Ejercicio8B.class.getClassLoader().getResource("Documentos/datos_personas.csv");
         HashMap<String, Persona> mapa = new HashMap<>();
@@ -34,6 +35,7 @@ public class Ejercicio8B {
             e.printStackTrace();
         }
 
+        // PArte 2 pide dni y lo busca
         while (true) {
             System.out.println("Dame le dni que buscas: ");
             String dni = scanner.nextLine();
@@ -45,22 +47,25 @@ public class Ejercicio8B {
                     .forEach(s -> System.out.println("Dni: " + s.getKey() + " Informacion: " + s.getValue()));
         }
 
-        url = Ejercicio8B.class.getClassLoader().getResource("Documentos/datos_jubilados.csv");
-        List<String> lista = mapa.entrySet().stream().sorted(Map.Entry.comparingByKey((s1, s2) -> s1.compareTo(s2)))
-                .map(s1 -> s1.getKey())
-                .collect(Collectors.toList());
+        // Parte 3 Crea un fichero csv con los jubilados
+        List<Persona> lista = mapa.entrySet().stream().filter(s -> s.getValue().esJubilado())
+                .sorted(Map.Entry.comparingByKey((s1, s2) -> s1.compareTo(s2)))
+                .map(Map.Entry::getValue).toList();
+        File file = new File(
+                "C:/Users/Juan/Desktop/Personal/prog-maven/tema12-ficheros/src/main/java/content/EjerciciosB/resultado8/datos_jubilados.csv");
 
         try {
-            Path ruta = Paths.get(url.toURI());
-            for (String dni : lista) {
-                Persona p = mapa.get(dni);
-                if (p.esJubilado())
-                    Files.write(ruta,
-                            p.getDni() + ";" + p.getNombre() + ";" + p.getApellidos() + ";" + p.getEdad() + ";",
-                            StandardOpenOption.WRITE);
-
+            if (!file.exists())
+                file.createNewFile();
+            Path ruta = Paths.get(file.toURI());
+            for (Persona persona : lista) {
+                Files.write(ruta,
+                        (persona.getDni() + ";" + persona.getNombre() + ";" + persona.getApellidos() + ";"
+                                + persona.getEdad() + "\n")
+                                .getBytes(),
+                        StandardOpenOption.CREATE, StandardOpenOption.APPEND);
             }
-        } catch (URISyntaxException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
 
